add introducing_JSX html

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,17 @@
 code {
     display: block;
     white-space: pre;
+    background: #333;
+    color: #fff;
 }
+
+.code-function { color: #e4e487; }
+.code-html { color: grey; }
+.code-element { color: #1e82c1; }
+.code-global { color: #39f0b0; }
+.code-variable { color: lightblue; }
+.code-txt { color: tan; }
+.code-return { color: #9a57c9; }
+.code-comments { color: #226d22 }
+
+.highlight { background: lightyellow; }
